third_party/move/move-compiler-v2/tests/lambda/inline-parity/shadowing_unused.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/shadowing_unused.move:11:14
   │
11 │         quux(|a, b| f(a, b), z);
   │              ^^^^^^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/shadowing_unused.move:17:13
   │
17 │           foo(|y, _q| {
   │ ╭─────────────^
18 │ │             _x = y  // We expect this to assign 3 via foo if renaming works correctly. If not it would
19 │ │                     // have the value 1.
20 │ │         }, z);
   │ ╰─────────^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/shadowing_unused.move:27:14
   │
27 │           quux(|y, _q| {
   │ ╭──────────────^
28 │ │             _x = y  // We expect this to assign 3 via foo if renaming works correctly. If not it would
29 │ │                     // have the value 1.
30 │ │         }, z);
   │ ╰─────────^
